--- a/.gitignore
+++ b/.gitignore
@@ -121,12 +121,13 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+**/.venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+**/.envrc
 
 # Spyder project settings
 .spyderproject
@@ -158,3 +159,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
